@@ -22,15 +22,14 @@ public class IntTypeTest {
 
 		IntType type = IntType.instance();
 
-		assertEquals(new Integer(-1234), type.parse("-1234"));
-		assertEquals(new Integer(0), type.parse("0"));
+		assertEquals(Integer.valueOf(-1234), type.parse("-1234"));
+		assertEquals(Integer.valueOf(0), type.parse("0"));
 		assertNull(type.parse(null));
 	}
 
 	@Test
 	public void testParseDecimalNumber() {
 		IntType type = IntType.instance();
-		assertFalse(type.isParsable("1234.1234"));
 
 		assertThrows(ParsingException.class, () ->
 																						 type.parse("1234.1234")
@@ -40,7 +39,6 @@ public class IntTypeTest {
 	@Test
 	public void testParseNotANumber() {
 		IntType type = IntType.instance();
-		assertFalse(type.isParsable("apple"));
 
 		assertThrows(ParsingException.class, () ->
 																						 type.parse("apple")
@@ -50,7 +48,6 @@ public class IntTypeTest {
 	@Test
 	public void testParseEmpty() throws ParsingException {
 		IntType type = IntType.instance();
-		assertFalse(type.isParsable(""));
 
 		assertThrows(ParsingException.class, () ->
 																						 type.parse("")
@@ -60,7 +57,6 @@ public class IntTypeTest {
 	@Test
 	public void testParseTooBig() {
 		IntType type = IntType.instance();
-		assertFalse(type.isParsable("9999999999999999999999999999999999999999"));
 
 		assertThrows(ParsingException.class, () ->
 																						 type.parse("9999999999999999999999999999999999999999")
@@ -70,7 +66,6 @@ public class IntTypeTest {
 	@Test
 	public void testParseTooSmall() {
 		IntType type = IntType.instance();
-		assertFalse(type.isParsable("-9999999999999999999999999999999999999999"));
 
 		assertThrows(ParsingException.class, () ->
 																						 type.parse("-9999999999999999999999999999999999999999")
@@ -82,8 +77,8 @@ public class IntTypeTest {
 
 		IntType type = IntType.instance();
 
-		Object o = new Integer(999);
-		assertEquals(new Integer(999), type.cast(o));
+		Object o = Integer.valueOf(999);
+		assertEquals(Integer.valueOf(999), type.cast(o));
 		assertTrue(type.cast(o) instanceof Integer);
 	}
 
