@@ -20,15 +20,14 @@ public class LngTypeTest {
 		
 		LngType type = LngType.instance();
 		
-		assertEquals(new Long(-1234), type.parse("-1234"));
-		assertEquals(new Long(0), type.parse("0"));
+		assertEquals(Long.valueOf(-1234), type.parse("-1234"));
+		assertEquals(Long.valueOf(0), type.parse("0"));
 		assertNull(type.parse(null));
 	}
 	
 	@Test
 	public void testParseDecimalNumber() {
 		LngType type = LngType.instance();
-		assertFalse(type.isParsable("1234.1234"));
 
 		assertThrows(ParsingException.class, () ->
 			type.parse("1234.1234")
@@ -38,7 +37,6 @@ public class LngTypeTest {
 	@Test
 	public void testParseNotANumber() throws ParsingException {
 		LngType type = LngType.instance();
-		assertFalse(type.isParsable("apple"));
 
 		assertThrows(ParsingException.class, () ->
 			type.parse("apple")
@@ -48,7 +46,6 @@ public class LngTypeTest {
 	@Test
 	public void testParseEmpty() throws ParsingException {
 		LngType type = LngType.instance();
-		assertFalse(type.isParsable(""));
 
 		assertThrows(ParsingException.class, () ->
 			type.parse("")
@@ -66,7 +63,6 @@ public class LngTypeTest {
 	@Test
 	public void testParseTooBig() {
 		LngType type = LngType.instance();
-		assertFalse(type.isParsable("9999999999999999999999999999999999999999"));
 
 		assertThrows(ParsingException.class, () ->
 			type.parse("9999999999999999999999999999999999999999")
@@ -76,7 +72,6 @@ public class LngTypeTest {
 	@Test
 	public void testParseTooSmall() {
 		LngType type = LngType.instance();
-		assertFalse(type.isParsable("-9999999999999999999999999999999999999999"));
 
 		assertThrows(ParsingException.class, () ->
 			type.parse("-9999999999999999999999999999999999999999")
@@ -88,8 +83,8 @@ public class LngTypeTest {
 		
 		LngType type = LngType.instance();
 		
-		Object o = new Long(999);
-		assertEquals(new Long(999L), type.cast(o));
+		Object o = Long.valueOf(999);
+		assertEquals(Long.valueOf(999L), type.cast(o));
 		assertTrue(type.cast(o) instanceof Long);
 	}
 	
